Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -392,6 +392,24 @@
         </section>
     </main>
 
+    <!-- Map Section -->
+        <section id="map" class="py-16 md:py-20 bg-gradient-to-b from-primary to-secondary">
+            <div class="container mx-auto px-4">
+                <h2 class="text-2xl md:text-3xl font-bold mb-8 md:mb-12 text-center fade-in">Nuestra Ubicación</h2>
+                <div class="fade-in">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119446.91863736727!2d-102.36680385!3d21.8811358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8429ee069f8f9c31%3A0x9b7f3d9c75e0e4!2sAguascalientes%2C%20Ags.%2C%20Mexico!5e0!3m2!1sen!2sus!4v1636500000000!5m2!1sen!2sus" 
+                            width="100%" 
+                            height="450" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy"
+                            class="rounded-lg shadow-lg">
+                    </iframe>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Footer -->
     <footer class="bg-primary text-white py-8">
         <div class="container mx-auto px-4">
@@ -409,6 +427,7 @@
                         <li><a href="#gallery" class="hover:text-secondary transition">Galería</a></li>
                         <li><a href="#testimonials" class="hover:text-secondary transition">Testimonios</a></li>
                         <li><a href="#contact" class="hover:text-secondary transition">Contacto</a></li>
+                        <li><a href="#map" class="hover:text-secondary transition">Ubicación</a></li>
                     </ul>
                 </div>
                 <div>
